# ai_music_companion

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
.sdd/: experience.md  project.json  work-log.md
backend/: .env.example
backend/src/: main.py
backend/src/api/: deps.py  errors.py
backend/src/core/: config.py  guest_cookie.py
backend/src/db/: chord_chart_seed.py  models.py  session.py
backend/src/integrations/: audio_analyzer.py  chord_charts.py  (+10 more)
backend/tests/: conftest.py  test_chat.py  test_chordpro_parser.py  test_config.py  test_guest.py  test_lyric_provider.py  test_main.py  test_music_keywords.py  test_music_original.py  test_playlists.py  test_score.py  test_score_audio_pipeline.py  test_songs.py
deploy/: docker-daemon-mirror.example.json  nginx.conf
docs/: PRD.md  Plan.md  api-contracts.md
docs/prototypes/: README.md  index.html
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx  vite-env.d.ts
pycore/: __init__.py
pycore/api/: __init__.py  deps.py  middleware.py  responses.py  routes.py  server.py
pycore/core/: __init__.py  config.py  exceptions.py  logger.py  schema.py
pycore/docs/: api.md  core.md  examples.md  execution.md  getting-started.md  index.md  llm.md  plugins.md  services.md
pycore/execution/: __init__.py  context.py  flow.py
pycore/integrations/: __init__.py
pycore/plugins/: __init__.py  base.py  registry.py
pycore/services/: __init__.py  agent.py  base.py  simple.py  state.py
scripts/: dev-backend.sh  dev-frontend.sh
(+96 files in other folders)
